# enterprise-hermes-agent

./: .gitguardian.yaml  .gitignore  .gitleaks-session-docs.toml  .gitleaks.toml  .pre-commit-config.yaml  .scaffold-state.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  enterprise-hermes-agent.code-workspace  hermes_pastas.txt  main.py  mcp-questions.yaml  objetivo.yaml  pyproject.toml
.claude/commands/: session-end..md  session-start.md
.github/: BADGES.md  CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/agents/: objetivo-init.agent.md
.github/workflows/: ci-template.yml  dependency-check.yml  dependency-review.yml  git-validation.yml.bakp  scaffold-tests.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
docs/: BRANCH_PROTECTION_SETUP.md  INDEX.md  PROJECT_CREATION_SUMMARY.md  TODAY_ACTIVITIES.md  TODO.md
docs/architecture/: overview.md
docs/bugs/: 2026-07-22_duplicidade-app-vya-digital.md  BUG_REPORT_DASHBOARD_AUTH_LOGIN_500.md  BUG_REPORT_WS_1006.md  BUG_REPORT_WS_1006_RECORRENCIA.md
docs/guides/: SESSION_DOCS_STYLE_GUIDE.md
logs/: README.md
scripts/: activate-mcp.sh  mem_context.py  session-search.py  session-time-tracker.py  session-validate.py  setup-branch-protection.py  update_hermes_agent_version.py
scripts/git-hooks/: commit-msg
scripts/lib/: git_validators.py  sanitize.py
wfdb01/: docker-compose.yaml  env_modelo
(+125 files in other folders)
